# python-semantic-release

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  codeql.yaml  commitlint.yaml  dependency-review.yaml  lint.yaml  release.yaml  test.yaml
python_semantic_release/: __init__.py  cli.py  commit_analyzer.py  config_converter.py  config_loader.py  git_plugin.py  git_service.py  models.py  orchestrator.py  protocols.py  release_notes_generator.py  version_service.py  version_updater.py
python_semantic_release/changelog/: generator.py
python_semantic_release/commit/: analyzer.py  parser.py
python_semantic_release/config/: converter.py  js_parser.py
python_semantic_release/git/: plugin.py
python_semantic_release/github/: service.py
tests/: conftest.py  test_cli.py  test_commit_analyzer.py  test_commit_parser.py  test_config_converter.py  test_config_loader.py  test_git_plugin.py  test_git_service.py  test_github_service.py  test_js_parser.py  test_models.py  test_orchestrator.py  test_release_notes_generator.py  test_version_service.py  test_version_updater.py
